--- a/jaxy/pom.xml
+++ b/jaxy/pom.xml
@@ -6,9 +6,42 @@
 	<artifactId>jaxy</artifactId>
 	<version>0.8.0</version>
 	<packaging>jar</packaging>
-
 	<name>jaxy</name>
-	<url>http://maven.apache.org</url>
+	<description>Automatic parser generator for JSON/XML Web API.
+	</description>
+	<url>https://github.com/riversun/jaxy</url>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/riversun/jaxy
+		</url>
+		<connection>scm:git:git://github.com/riversun/jaxy.git
+		</connection>
+		<developerConnection>scm:git:git://github.com/riversun/jaxy.git
+		</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>riversun</id>
+			<name>Tom Misawa</name>
+			<email>riversun.org@gmail.com</email>
+			<url>http://riversun.org</url>
+		</developer>
+	</developers>
+
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/riversun/jaxy/issues
+		</url>
+	</issueManagement>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,18 +62,83 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+
 				<configuration>
+
+					<source>1.5</source>
+					<target>1.5</target>
+
 					<excludes>
 						<exclude>examples/**/*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<author>true</author>
+					<source>1.5</source>
+					<show>protected</show>
+					<encoding>UTF-8</encoding>
+					<charset>UTF-8</charset>
+					<docencoding>UTF-8</docencoding>
+					<additionalJOption>-J-Duser.language=en</additionalJOption>
+				</configuration>
+			</plugin>
+
+
 		</plugins>
 	</build>
+
 </project>
